--- a/package.json
+++ b/package.json
@@ -16,23 +16,21 @@
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "tsdx lint",
+      "commit-msg": "commitlint --edit -E HUSKY_GIT_PARAMS"
     }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
   },
   "name": "vue-adaptive-utils",
   "author": "Abdelrahman Awad",
   "module": "dist/vue-adaptive-utils.esm.js",
+  "description": "Deliver empathetic experiences to your users by adapting to their capabilities",
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
     "@types/jest": "^25.1.1",
     "husky": "^4.2.1",
     "tsdx": "^0.12.3",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "vue": "^3.0.0-alpha.4"
   }
 }
