--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test": "tsdx test",
     "test:coverage": "tsdx test --coverage",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "./scripts/deploy.sh"
   },
   "peerDependencies": {
     "vue": "^3.0.0-alpha.9"
@@ -35,6 +38,7 @@
     "tsdx": "^0.13.0",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3",
-    "vue": "^3.0.0-alpha.9"
+    "vue": "^3.0.0-alpha.9",
+    "vuepress": "^1.4.0"
   }
 }
