--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docs:deploy": "./scripts/deploy.sh"
   },
   "peerDependencies": {
-    "vue": "^3.0.0-alpha.9"
+    "vue": "^3.0.0-beta.1"
   },
   "husky": {
     "hooks": {
@@ -36,9 +36,8 @@
     "flush-promises": "^1.0.2",
     "husky": "^4.2.3",
     "tsdx": "^0.13.0",
-    "tslib": "^1.11.1",
     "typescript": "^3.8.3",
-    "vue": "^3.0.0-alpha.9",
+    "vue": "^3.0.0-beta.1",
     "vuepress": "^1.4.0"
   }
 }
