--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "vue-adaptive-utils",
+  "author": "Abdelrahman Awad",
+  "module": "dist/vue-adaptive-utils.esm.js",
+  "description": "Deliver empathetic experiences to your users by adapting to their capabilities",
   "version": "0.1.4",
   "license": "MIT",
   "main": "dist/index.js",
@@ -7,12 +11,11 @@
     "dist"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "test:coverage": "tsdx test --coverage",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "build": "node scripts/build.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . '**/*.{js,jsx,ts,tsx}' --fix",
+    "format": "prettier \"./**/*.ts\" --write",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "docs:deploy": "./scripts/deploy.sh"
@@ -22,20 +25,50 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint",
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint --edit -E HUSKY_GIT_PARAMS"
     }
   },
-  "name": "vue-adaptive-utils",
-  "author": "Abdelrahman Awad",
-  "module": "dist/vue-adaptive-utils.esm.js",
-  "description": "Deliver empathetic experiences to your users by adapting to their capabilities",
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write",
+      "jest --maxWorkers=1 --bail --findRelatedTests"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "jest --maxWorkers=1 --bail --findRelatedTests"
+    ]
+  },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@types/jest": "^26.0.9",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@types/jest": "^26.0.10",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
+    "chalk": "^4.1.0",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "filesize": "^6.1.0",
     "flush-promises": "^1.0.2",
-    "husky": "^4.2.3",
-    "tsdx": "^0.13.0",
+    "fs-extra": "^9.0.1",
+    "gzip-size": "^5.1.1",
+    "husky": "^4.2.5",
+    "jest": "^26.4.0",
+    "lint-staged": "^10.2.11",
+    "rollup": "^2.26.3",
+    "rollup-plugin-dts": "^1.4.10",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "terser": "^5.1.0",
+    "ts-jest": "^26.2.0",
     "typescript": "^3.9.7",
     "vue": "^3.0.0-beta.1",
     "vuepress": "^1.5.3"
