--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types", "test"],
+  "include": ["src", "types", "tests"],
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
